--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MYSQL_PORT: 3306
-MYSQL_PASSWORD: secret
-MYSQL_ROOT_PASSWORD: secret
-MYSQL_DATABASE: docker-php
+MYSQL_PASSWORD: password
+MYSQL_ROOT_PASSWORD: password
+MYSQL_DATABASE: npmr-docker
 MYSQL_USER: user
 REDIS_PORT: 6379
